<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>metadev.digital</groupId>
    <artifactId>MetaCustomItemsLib</artifactId>
    <version>3.0.0</version>
    <name>CustomItems Library</name>
    <url>https://github.com/Metadev-Digital/CustomItemsLib</url>
    <description>CustomItemsLib is a library with code shared between MobHunting and BagOfGold.</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.compilerVersion>21</maven.compiler.compilerVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <issueManagement>
        <url>https://github.com/Metadev-Digital/CustomItemsLib/issues</url>
    </issueManagement>

    <repositories>
        <!-- Spigot -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <!-- Reserve -->
        <repository>
            <id>reserve-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>

        <!-- ProtocolLib -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>

        <!-- Jitpack (Vault) -->
        <repository>
            <id>jitpack-repo</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <!-- ********************************************************************** -->
    <!-- ******************************** Build ******************************* -->
    <!-- ********************************************************************** -->
    <build>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
        <defaultGoal>clean install</defaultGoal>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
            <resource>
                <targetPath>lang</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources/lang</directory>
            </resource>
        </resources>
        <directory>${basedir}/target</directory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <createSourcesJar>false</createSourcesJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <createSourcesJar>false</createSourcesJar>
                    <artifactSet>
                        <includes>
                            <include>org.bstats:*</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>metadev.digital.metacustomitemslib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <!-- ********************************************************************** -->
    <!-- **************************** Dependencies **************************** -->
    <!-- ********************************************************************** -->
    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.8-R0.1-SNAPSHOT</version>
        </dependency>

        <!-- Bstats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-base</artifactId>
            <version>3.1.0</version>
        </dependency>

        <!-- BagofGold -->
        <dependency>
            <groupId>metadev.digital</groupId>
            <artifactId>MetaBagOfGold</artifactId>
            <version>4.5.11-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
            <scope>system</scope>
            <systemPath>${basedir}\lib\MetaBagOfGold-4.5.11-SNAPSHOT.jar</systemPath>
        </dependency>

        <!-- ProtocolLib -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.4.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- Reserve --> <!-- TODO: Replace with https://bstats.org/plugin/bukkit/VaultUnlocked/22252 ex: https://github.com/TownyAdvanced/Towny/blob/d382a5d5b614ac5e2032b9e94bc861f2f313bf4c/Towny/src/main/java/com/palmergames/bukkit/towny/TownyEconomyHandler.java#L168 -->
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>Reserve</artifactId>
            <version>0.1.5.4</version>
        </dependency>

        <dependency>
            <groupId>com.Zrips</groupId>
            <artifactId>CMI</artifactId>
            <version>9.8.0.5</version>
            <scope>system</scope>
            <systemPath>${basedir}\lib\CMI-9.8.0.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.Zrips</groupId>
            <artifactId>CMILib</artifactId>
            <version>1.5.6.3</version>
            <scope>system</scope>
            <systemPath>${basedir}\lib\CMILib1.5.6.3.jar</systemPath>
        </dependency>

        <!-- Title Manager -->
        <dependency>
            <groupId>io.puharesource.mc</groupId>
            <artifactId>TitleManager</artifactId>
            <version>2.3.6</version>
            <scope>system</scope>
            <systemPath>${basedir}\lib\TitleManager-2.3.6.jar</systemPath>
        </dependency>

        <!-- Google -->

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
        </dependency>

        <!-- Mysql -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.4.0</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>protobuf-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Commons (used in UpdateChecker) -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>

        <!-- Maven (used for Sem Ver comparison -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-artifact</artifactId>
            <version>3.9.11</version>
        </dependency>

    </dependencies>
</project>